Second photo batch. Small text changes

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -37,9 +37,9 @@
             <div class="container clearfix">
                 <div class="row">
                     <div class="col-lg-8 col-md-12 mx-auto">
-                        <p class="italic">Oh, hello, nice to meet you!</p>
-                        <h1>I am B&amp;W Landing page or portfolio Theme.</h1>
-                        <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p>
+                        <!-- <p class="italic">Oh, hello, nice to meet you!</p> -->
+                        <h1>Kim Eschenbauch Photography</h1>
+                        <!-- <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p> -->
                     </div>
                 </div>
             </div>
@@ -156,24 +156,24 @@
                         </div>
                         <div class="col-md-4">
                             <div class="box">
-                                <a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a>
+                                <a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="images/455467/20200103_131247.jpg" alt="image" class="img-fluid"></a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="box">
-                                <a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a>
+                                <a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="images/455467/20200103_131303.jpg" alt="image" class="img-fluid"></a>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="box">
-                                <a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-7.jpg" alt="image" class="img-fluid"></a>
+                                <a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="images/455467/20200103_131335.jpg" alt="image" class="img-fluid"></a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="box">
-                                <a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-8.jpg" alt="image" class="img-fluid"></a>
+                                <a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="images/20191221_144747.jpg" alt="image" class="img-fluid"></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -263,7 +263,7 @@
             </div>
         </div>
     </section>
-    <div id="map"></div>
+
     <footer style="background-color: #111;">
         <div class="container">
             <div class="row copyright">
