Added text provided by client. Removed unused sections

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Black And White Bootstrap Landing Page / Portfolio</title>
+    <title>Kim Eschenbauch Photography</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -50,7 +50,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a href="#intro" class="navbar-brand link-scroll"><img src="img/logo.png" alt="" class="img-fluid"></a>
+                <!-- <a href="#intro" class="navbar-brand link-scroll"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
                 <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
                 <div id="navbarSupportedContent" class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
@@ -70,21 +70,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2 class="heading"> ~Lensphere Info ~ </h2>
-                    <p class="lead"> Any info about you or the Lensphere can be added here.</p>
+                    <h2 class="heading"> Perspective </h2>
+                    <p class="lead"> Images in this collection are captured through a Lensphere.</p>
                     <p>
-                        <p> </p>
+                        <p>
+                            <quote>It's not what you look at that matters; it's what you see.</quote>
+                            <br> ~ Henry David Thoreau</p>
                 </div>
                 <div class="col-lg-5 mx-auto">
                     <p>
-                        <img src="finalImages/20191102_1634421.jpg" " class="img-fluid rounded-circle "></p>
+                        <img src="finalImages/20191102_1634421.jpg" class="img-fluid rounded-circle "></p>
+                    <!-- TODO - fix this image -->
                 </div>
             </div>
         </div>
     </section>
+    <hr>
     <!-- about end-->
     <!-- Services-->
-    <section id="services " style="background-color: #eee ">
+    <!-- <section id="services " style="background-color: #eee ">
         <div class="container ">
             <div class="row services ">
                 <div class="col-lg-12 ">
@@ -115,7 +119,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services end-->
 
     <!-- Portfolio / gallery-->
@@ -187,7 +191,7 @@
     </section>
     <!-- Portfolio / gallery end-->
     <!-- text page-->
-    <section id="text " class="text-page section-inverse ">
+    <!-- <section id="text " class="text-page section-inverse ">
         <div class="container ">
             <div class="row ">
                 <div class="col-lg-12 ">
@@ -209,9 +213,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- text page end-->
     <!-- contact-->
+    <hr>
     <section id="contact " style="background-color: #fff; " class="text-page pb-4 ">
         <div class="container ">
             <div class="row ">
@@ -255,8 +260,7 @@
                             <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could
                                 cease green oh. </p>
                             <p class="social "><a href="# " title=" " class="facebook "><i class="fa fa-facebook "></i></a><a href="# " title=" " class="twitter "><i class="fa fa-twitter "></i></a><a href="# " title=" " class="gplus "><i class="fa fa-google-plus
-                            "></i></a><a href="# "
-                                    title=" " class="instagram "><i class="fa fa-instagram "></i></a><a href="# " title=" " class="email "><i class="fa fa-envelope "></i></a></p>
+                            "></i></a><a href="# " title=" " class="instagram "><i class="fa fa-instagram "></i></a><a href="# " title=" " class="email "><i class="fa fa-envelope "></i></a></p>
                         </div>
                     </div>
                 </div>
