--- a/distribution/index.html
+++ b/distribution/index.html
@@ -24,6 +24,7 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- Leaflet CSS - For the map-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Shadows+Into+Light&display=swap" rel="stylesheet">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -36,9 +37,9 @@
         <div class="content">
             <div class="container clearfix">
                 <div class="row">
-                    <div class="col-lg-8 col-md-12 mx-auto">
+                    <div class="col-lg-10 col-md-12 mx-auto">
                         <!-- <p class="italic">Oh, hello, nice to meet you!</p> -->
-                        <h1>Kim Eschenbauch Photography</h1>
+                        <h1 class="KimsFont">Kimberly Eschenbauch Photography</h1>
                         <!-- <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p> -->
                     </div>
                 </div>
@@ -56,9 +57,9 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Home</a></li>
                         <li class="nav-item"><a href="#about" class="nav-link link-scroll">About </a></li>
-                        <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
+                        <!-- <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li> -->
                         <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
-                        <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li>
+                        <!-- <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li> -->
                         <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
                     </ul>
                 </div>
@@ -71,15 +72,15 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 class="heading"> Perspective </h2>
-                    <p class="lead"> Images in this collection are captured through a Lensphere.</p>
-                    <p>
-                        <p>
-                            <quote>It's not what you look at that matters; it's what you see.</quote>
-                            <br> ~ Henry David Thoreau</p>
+
+
+                    <div class="largeText">It's not what you look at that matters; it's what you see.
+                        <br> ~ Henry David Thoreau</div>
+
                 </div>
                 <div class="col-lg-5 mx-auto">
                     <p>
-                        <img src="finalImages/20191102_1634421.jpg" class="img-fluid rounded-circle "></p>
+                        <img src="finalImages/20200107_2051451.jpg" class="img-fluid  "></p>
                     <!-- TODO - fix this image -->
                 </div>
             </div>
@@ -130,31 +131,31 @@
                     <div class="row ">
                         <div class="col-md-12 col-lg-8 ">
                             <h2 class="heading ">Portfolio</h2>
-                            <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without
-                                farther she exposed saw man led. Along on happy could cease green oh. </p>
+                            <p class="lead largeText"> Images in this collection are captured through a Lensphere.</p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row ">
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <a href="images/20191215_135634.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_082622.jpg " alt="image" class="img-fluid portImg"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <a href="images/20191221_144747.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_075309.jpg " alt="image" class="img-fluid portImg"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <a href=" " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200106_145612.jpg " alt="image " class="img-fluid portImg"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="row ">
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="images/20191215_135634.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_071650.jpg " alt="image " class="img-fluid "></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href="images/20191221_144747.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_075309.jpg " alt="image " class="img-fluid "></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href=" " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_075659.jpg " alt="image " class="img-fluid "></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href="img/portfolio-4.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_082622.jpg " alt="image " class="img-fluid portImg "></a>
+                                <a href="img/portfolio-4.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_071650.jpg" alt="image " class="img-fluid portImg "></a>
                             </div>
                         </div>
                         <div class="col-md-4 ">
@@ -181,7 +182,7 @@
                         </div>
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="img/portfolio-9.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200106_145612.jpg " alt="image " class="img-fluid portImg "></a>
+                                <a href="img/portfolio-9.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191205_075659.jpg" alt="image " class="img-fluid portImg "></a>
                             </div>
                         </div>
                     </div>
@@ -189,6 +190,14 @@
             </div>
         </div>
     </section>
+    <!-- <div>
+        <div><img src="finalImages/Resized_20200106_145612.jpg "></div>
+        <div><img src="finalImages/20200107_2051451.jpg "></div>
+        <div><img src="finalImages/Resized_20191205_071650.jpg"></div>
+        <div><img src="finalImages/Resized_20191208_150721.jpg"></div>
+        <div><img src="finalImages/Resized_20200103_140445.jpg"></div>
+        <div><img src="finalImages/Resized_20200106_145612.jpg"></div>
+    </div> -->
     <!-- Portfolio / gallery end-->
     <!-- text page-->
     <!-- <section id="text " class="text-page section-inverse ">
@@ -216,8 +225,8 @@
     </section> -->
     <!-- text page end-->
     <!-- contact-->
-    <hr>
-    <section id="contact " style="background-color: #fff; " class="text-page pb-4 ">
+    <!-- <hr> -->
+    <!-- <section id="contact " style="background-color: #fff; " class="text-page pb-4 ">
         <div class="container ">
             <div class="row ">
                 <div class="col-lg-12 ">
@@ -253,26 +262,26 @@
                                     </div>
                                 </div>
                             </form>
-                        </div>
-                        <div class="col-lg-6 ">
-                            <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points.
+                        </div> -->
+    <div class="col-lg-6 ">
+        <!-- <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points.
                                 Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
                             <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could
-                                cease green oh. </p>
-                            <p class="social "><a href="# " title=" " class="facebook "><i class="fa fa-facebook "></i></a><a href="# " title=" " class="twitter "><i class="fa fa-twitter "></i></a><a href="# " title=" " class="gplus "><i class="fa fa-google-plus
-                            "></i></a><a href="# " title=" " class="instagram "><i class="fa fa-instagram "></i></a><a href="# " title=" " class="email "><i class="fa fa-envelope "></i></a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                                cease green oh. </p> -->
+        <!-- <p class="social "><a href="# " title=" " class="facebook "><i class="fa fa-facebook "></i></a><a href="# " title=" " class="twitter "><i class="fa fa-twitter "></i></a><a href="# " title=" " class="gplus "><i class="fa fa-google-plus
+                            "></i></a><a href="# " title=" " class="instagram "><i class="fa fa-instagram "></i></a><a href="# " title=" " class="email "><i class="fa fa-envelope "></i></a></p> -->
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
     </section>
 
     <footer style="background-color: #111; ">
         <div class="container ">
             <div class="row copyright ">
                 <div class="col-md-6 ">
-                    <p class="mb-md-0 text-center text-md-left ">&copy;2019 Your name/company goes here</p>
+                    <p class="mb-md-0 text-center text-md-left ">&copy;Kimberly Eschenbauch Photography</p>
                 </div>
                 <div class="col-md-6 ">
                     <p class="credit mb-md-0 text-center text-md-right ">Template by <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form ">Bootstrapious</a></p>
