--- a/distribution/index.html
+++ b/distribution/index.html
@@ -34,16 +34,17 @@
 <body>
     <section id="intro" style="background-image: url('finalImages/20200106_1455311.jpg');" class="intro">
         <div class="overlay"></div>
-        <div class="content">
-            <div class="container clearfix">
-                <div class="row">
-                    <div class="col-lg-10 col-md-12 mx-auto">
-                        <!-- <p class="italic">Oh, hello, nice to meet you!</p> -->
-                        <h1 class="KimsFont">Kimberly Eschenbauch Photography</h1>
-                        <!-- <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p> -->
-                    </div>
+        <!-- <div class="content"> -->
+        <!-- <h1 class="KimsFont">Kimberly Eschenbauch Photography</h1> -->
+        <div class="container clearfix content">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 ">
+                    <!-- <p class="italic">Oh, hello, nice to meet you!</p> -->
+                    <h1 class="KimsFont">Kimberly Eschenbauch Photography</h1>
+                    <!-- <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p> -->
                 </div>
             </div>
+            <!-- </div> -->
         </div>
     </section>
     <!-- intro end-->
