--- a/distribution/index.html
+++ b/distribution/index.html
@@ -231,6 +231,30 @@
     <hr>
     <section id="contact " style="background-color: #fff; " class="text-page pb-4 ">
         <div class="container ">
+
+
+
+            <h2 class="heading ">Purchase Prints Locally</h2>
+            <div class="row ">
+                <div class="col-md-6 pull-left">
+                    <h3 class="">Koi Coffee</h3>
+
+                    <div class="fb-page" data-href="https://www.facebook.com/koicoffeeandtea/?ref=py_c" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="">Caramel Crisp</h3>
+                    <div class="fb-page" data-href="https://www.facebook.com/Bestcookiesever/" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+                </div>
+
+            </div>
+
+
+
+        </div>
+    </section>
+    <hr>
+    <section id="contact " style="background-color: #fff; " class="text-page pb-4 ">
+        <div class="container ">
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-lg-4">
