--- a/distribution/index.html
+++ b/distribution/index.html
@@ -238,13 +238,17 @@
             <div class="row ">
                 <div class="col-md-6 pull-left">
                     <h3 class="">Koi Coffee</h3>
-
+                    <br>
                     <div class="fb-page" data-href="https://www.facebook.com/koicoffeeandtea/?ref=py_c" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
-                </div>
+
+                    <br></div><br>
+
                 <div class="col-md-6">
                     <h3 class="">Caramel Crisp</h3>
+                    <br>
                     <div class="fb-page" data-href="https://www.facebook.com/Bestcookiesever/" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
-                </div>
+
+                    <br> </div>
 
             </div>
 
