removed old images

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -141,51 +141,51 @@
                     <div class="row ">
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="images/20191215_135634.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/20200109_1528231.jpg" alt="image" class="img-fluid portImg"></a>
+                                <img src="finalImages/20200109_1528231.jpg" alt="image" class="img-fluid portImg"></a>
                             </div>
                         </div>
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="images/20191221_144747.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200116_135951.jpg" alt="image" class="img-fluid portImg"></a>
+                                <img src="finalImages/Resized_20200116_135951.jpg" alt="image" class="img-fluid portImg"></a>
                             </div>
                         </div>
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href=" " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200120_161928.jpg" alt="image " class="img-fluid portImg"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href="img/portfolio-4.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200130_174409.jpg" alt="image " class="img-fluid portImg "></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href="img/portfolio-5.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200122_085930.jpg" alt="image " class="img-fluid portImg "></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 ">
-                            <div class="box ">
-                                <a href="img/portfolio-6.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200114_161502.jpg" alt="image " class="img-fluid portImg "></a>
+                                <img src="finalImages/Resized_20200120_161928.jpg" alt="image " class="img-fluid portImg"></a>
                             </div>
                         </div>
                     </div>
                     <div class="row ">
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="img/portfolio-7.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20191215_133831.jpg " alt="image " class="img-fluid portImg "></a>
+                                <img src="finalImages/Resized_20200130_174409.jpg" alt="image " class="img-fluid portImg "></a>
                             </div>
                         </div>
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="img/portfolio-8.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/Resized_20200207_130236.jpg" alt="image " class="img-fluid portImg "></a>
+                                <img src="finalImages/Resized_20200122_085930.jpg" alt="image " class="img-fluid portImg "></a>
                             </div>
                         </div>
                         <div class="col-md-4 ">
                             <div class="box ">
-                                <a href="img/portfolio-9.jpg " data-lightbox="image-1 " data-title="Some footer information " class="has-border "><img src="finalImages/20200122_0859471.jpg" alt="image " class="img-fluid portImg "></a>
+                                <img src="finalImages/Resized_20200114_161502.jpg" alt="image " class="img-fluid portImg "></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <img src="finalImages/Resized_20191215_133831.jpg " alt="image " class="img-fluid portImg "></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <img src="finalImages/Resized_20200207_130236.jpg" alt="image " class="img-fluid portImg "></a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="box ">
+                                <img src="finalImages/20200122_0859471.jpg" alt="image " class="img-fluid portImg "></a>
                             </div>
                         </div>
                     </div>
