--- a/distribution/index.html
+++ b/distribution/index.html
@@ -283,7 +283,8 @@
                     <p class="mb-md-0 text-center text-md-left ">&copy;Kimberly Eschenbauch Photography</p>
                 </div>
                 <div class="col-md-6 ">
-                    <p class="credit mb-md-0 text-center text-md-right ">Template by <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form ">Bootstrapious</a></p>
+                    <p class="credit mb-md-0 text-center text-md-right ">Logan Jones Development</a>
+                    </p>
                     <!-- Please do not remove the backlink to us. It is part of the licence conditions. Thanks for understanding :)-->
                 </div>
             </div>
