added a third store

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -244,12 +244,24 @@
                     <br></div><br>
                 <br>
                 <div class="col-md-6">
-                    <br>
+
                     <h3 class="">Caramel Crisp</h3>
                     <br>
                     <div class="fb-page" data-href="https://www.facebook.com/Bestcookiesever/" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
 
                     <br> </div>
+
+            </div>
+            <br>
+            <div class="row ">
+                <div class="col-md-12">
+                    <h3 class="">Amaze & Grace</h3>
+                    <br>
+                    <div class="fb-page" data-href="https://www.facebook.com/pg/AmazeandGrace/posts/?ref=page_internal" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+
+                    <br></div><br>
+                <br>
+
 
             </div>
 
@@ -275,6 +287,7 @@
             </div>
         </div>
     </section>
+
 
     <footer style="background-color: #111; ">
         <div class="container ">
