--- a/distribution/index.html
+++ b/distribution/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <!-- Lightbox-->
     <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
     <!-- theme stylesheet-->
@@ -64,9 +65,9 @@
     </nav>
     <!-- about-->
     <section id="about" class="text">
-        <div class="container">
+        <div class="container" id="smallAbout">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-xs-2">
                     <h2 class="heading"> Perspective </h2>
 
                     <blockquote class="ludwig">
@@ -76,8 +77,9 @@
 
                         <footer>Henry David Thoreau</footer>
                     </blockquote>
+
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-xs-2">
                     <div class="card card-4">
                         <img src="finalImages/20200107_2051451.jpg" class="quoteImg">
 
@@ -162,8 +164,8 @@
                         </figure>
 
                         <figure class="col-md-4 d-md-inline-block ">
-                            <a href="carImgs/resize_20200207_121726_50_65.jpg" data-lightbox="image-2" class="has-border carImg">
-                                <img src="carImgs/resize_20200207_121726_50_65.jpg" class="img-fluid carImg">
+                            <a href="carImgs/resized_20191208_084139.jpg" data-lightbox="image-2" class="has-border carImg">
+                                <img src="carImgs/resized_20191208_084139.jpg" class="img-fluid carImg">
                             </a>
                         </figure>
                         <figure class="col-md-4 d-md-inline-block ">
